# Ferromon

./: .gitignore  .mailmap  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  pr_body_filter.md  pr_body_tick.md  pr_body_toosmall.md
.agents/skills/ferromon-polish/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: validate_unique_dashboard_fns.py
src/: app.rs  cli.rs  config.rs  disk.rs  main.rs  services.rs  system.rs  types.rs  update.rs  utils.rs
src/ui/: common.rs  dashboard.rs  disk_dive.rs  logs.rs  mod.rs  processes.rs  services.rs
tests/: config_file.rs
