[package]
name = "ferromon"
version = "0.2.3"
edition = "2021"
description = "Lightweight interactive Rust TUI for CPU/memory/disk monitoring"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChrisJohnson89/Ferromon"

[[bin]]
name = "ferro"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.27"
sysinfo = "0.30"
walkdir = "2.5"
