[package]
name = "ferromon"
version = "0.3.4"
edition = "2021"
description = "Lightweight interactive Rust TUI for CPU/memory/disk monitoring"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ChrisJohnson89/Ferromon"

[[bin]]
name = "ferro"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.27"
sysinfo = "0.30"
walkdir = "2.5"

# Self-update + release downloads
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
